# mcda-pytorch-tutorial

./: .gitignore  README.md  pyproject.toml
exercises/: part1-exercises.ipynb  pytorch-1-bonus-exercises.ipynb  pytorch-1-exercises.ipynb  pytorch-2-exercises.ipynb
slides/: package-lock.json  package.json
slides/part-01/: 01-introduction.md  02-tensors-basics.md  03-operations.md  04-broadcasting.md  05-reshaping.md  06-indexing.md  07-numpy-comparison.md  08-autograd.md  09-summary.md  code-verification.py  slides.md
slides/part-02/: 01-neural-networks.md  02-nn-module.md  03-loss-functions.md  04-optimizers.md  05-training-loop.md  06-evaluation.md  07-summary.md  slides.md
