[project]
name = "mcda-pytorch-tutorial"
version = "0.1.0"
description = "Introduction to PyTorch - MCDA 5511"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
]

[project.optional-dependencies]
cuda = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
]

# Default: PyPI (CPU)
# CUDA support: uv sync --extra cuda
[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", extra = "cuda" },
]
torchvision = [
    { index = "pytorch-cu124", extra = "cuda" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]
