[project]
name = "mcda-pytorch-tutorial"
version = "0.1.0"
description = "Introduction to PyTorch - MCDA 5511"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "matplotlib>=3.10.0",
    "scikit-learn>=1.6.0",
]

# Note: Default install includes CUDA support (works on CPU too, just larger download)
# For explicit CUDA 12.4 optimized build: uv sync --extra cu124
[project.optional-dependencies]
cu124 = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124", extra = "cu124" }
torchvision = { index = "pytorch-cu124", extra = "cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]
